--- a/Core/icons.qrc
+++ b/Core/icons.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
+	<file>paint.png</file>
         <file>icons/pencil.ico</file>
         <file>cursors/pencil.png</file>
         <file>icons/new.png</file>
